<resources>
    <string name="app_name">GeoMudah</string>
    <string name="primer_txt">Primer: Kegiatan memperoleh hasil terus dari sumber semulajadi.</string>
    <string name="primer_txt_2">Contohnya Tanih, Mineral, Hutan, dan Air</string>
    <string name="primer_txt_3">Contoh Sektor: Pertanian, perlombongan, pembalakan dan perikanan</string>

    <string name="sekunder_txt_1">Sekunder: Kegiatan menukar kepada barangan siap untuk pengguna</string>
    <string name="sekunder_txt_2">Contohnya Sektor perkilangan</string>


    <string name="tertier_txt_1">Tertier adalah kegiatan yang menyediakan perkhidmatan</string>
    <string name="tertier_txt_2">Contoh sektor: Pelancongan, perniagaan, pengangkutan dan pentadbiran</string>
    <string name="tertier_txt_3">Antara sektor ekonomi yang amat penting di Malaysia adalah sektor perkhidmatan yang mana menyumbang kepada 52.4% daripada jumlah pendapatan negara. Sektor pelancongan adalah subsektor yang banyak menyumbang kepada jumlah pendapatan negara.</string>

    <string name="ekologi_txt_1">Keindahan dan ketenangan sekitar tasik ini dilengkapi dengan kepelbagaian flora dan fauna. Disekitar Tasik Temenggor ini dapat dilihat burung atau  22 spesies ikan yang unik di tasik sedalam 100 meter ini</string>
    <string name="ekologi_txt_2">Ia merupakan antara hutan dara yang terakhir tertinggal di Malaysia di mana biodiversitinya boleh dikatakan tidak terjejas.</string>

    <string name="kesihatan_txt_1">Hospital Sungai Buloh terletak kira-kira 25km daripada Bandaraya Kuala Lumpur di Mukim Batu, Daerah Gombak, Selangor. Hospital Sungai Buloh telah dikenal pasti sebagai pusat kecemerlangan bagi Penyakit Berjangkit, Kecemasan dan Trauma, Pembedahan Neuro, Pembedahan Maxillo-Fasial, Pembedahan Plastik dan Rawatan Kebakaran, Ortopedik dan Traumatologi</string>

    <string name="pendidikan_txt_1">Kampus induk UIAM seluas 700 ekar terletak di Gombak, Selangor. UIAM juga mempunyai dua kampus cawangan di Kuantan dan juga Kuala Lumpur. Pusat Asasi UIAM terletak di Petaling Jaya, Selangor dan di Gambang, Pahang. UIAM mempunyai 13 buah kulliyyah (fakulti) dan 12 pusat kecemerlangan.</string>

    <string name="budaya_txt_1">Kota A Famosa (bermaksud "Yang Termasyhur" dalam bahasa Portugis) telah dibina oleh Portugis sebaik sahaja berjaya menawan Melaka pada tahun 1511. A Famosa terletak di Bandar Hilir, Melaka bersebelahan replika Istana Kesultanan Melaka dan Gereja St. Paul. Ia merupakan seni bina Eropah tertua yang masih tinggal di Asia.</string>

    <string name="sukan_txt_1">Sepang ialah sebuah daerah yang terletak di bahagian selatan negeri Selangor, Malaysia. Pada asalnya Sepang cumalah sebuah daerah terpencil yang jarang disinggahi. Tetapi kini, daerah Sepang paling dikenali sebagai tempat tuan rumah Litar Antarabangsa Sepang (SIC) yang terkenal di seluruh dunia sebagai tapak perlumbaan kereta berprestij Formula Satu</string>

    <string name="rekreasi_txt_1">Pulau Sipadan ialah sebuah pulau lautan berhampiran dengan Semporna, sebuah bandar di pantai timur Sabah, Malaysia. Pulau Sipadan merupakan satu-satunya pulau samudera di Malaysia daripada batu kapur dengan ketinggian 600 meter dari dasar laut.Pulau Sipadan terkenal sebagai satu pilihan tempat bagi aktiviti menyelam skuba (scuba diving) antara yang terbaik di dunia.</string>


    <string name="mice_txt_1">(Meeting Incentives Conventions and Exhibitions) Contohnya Pusat Dagangan Dunia Putra (Putra World Trade Centre) (PWTC) merupakan bangunan Ibu Pejabat UMNO Malaysia dan pusat pameran dan persidangan terkenal </string>

    <string name="tema_txt_1">George Town (juga disebut sebagai Tanjung dan Town oleh masyarakat tempatan) ialah bandaraya metropolitan Pulau Pinang, Malaysia yang tertua selepas Melaka serta ibu negeri kepada Pulau Pinang di timur lautnya. George Town juga disambung dengan feri dan jambatan ke Butterworth dan Ipoh berfungsi sebagai pusat perniagaan dan perdagangan tanah air.</string>

    <string name="pertanian_txt_1">Cameron Highlands atau Tanah Tinggi Cameron merupakan sebuah daerah dan pusat peranginan tanah tinggi di Pahang, Malaysia. Cameron Highland terletak setinggi 1,829 meter dari aras laut dan bersuhu antara 10°C hingga 20°C.Cameron Highlands mula diterokai oleh Sir William Cameron sekitar tahun 1885 di mana pada ketika itu beliau sedang melakukan pemetaan persempadanan Pahang-Perak.</string>

    <string name="pelancongan_txt_1">Pelancongan adalah kegiatan dalam ekonomi perkhidmatan.</string>
    <string name="pelancongan_txt_2">Sebahagian besar pelancong membelanjakan wang mereka pada sektor penginapan dan membeli-belah.</string>
    <string name="pelancongan_txt_3">Terdapat sembilan jenis pelancongan:</string>
    <string name="title_activity_tasik_temenggor_maps">Map</string>
    <string name="title_activity_hospital_sungai_buloh_maps">Map</string>
    <string name="title_activity_uiamaps">Map</string>
    <string name="title_activity_kota_afamosa_maps">Map</string>
    <string name="title_activity_sicmaps">Map</string>
    <string name="title_activity_pwtcmaps">Map</string>
    <string name="title_activity_georgetown_maps">Map</string>
    <string name="title_activity_cameron_highland_maps">Map</string>
    <string name="title_activity_pulau_sipadan_maps">Map</string>



    <string name="true_button">Betul</string>
    <string name="false_button">Salah</string>
    <string name="next_button">Seterusnya</string>
    <string name="previous_button">Sebelum</string>
    <string name="correct_toast">Wow, betul lah!</string>
    <string name="incorrect_toast">hahaha, cuba lagi bro!</string>

    <string name="question_malaysia">Terdapat 3 jenis kegiatan ekonomi di Malaysia.</string>
    <string name="question_oceans">Ekonomi primer ialah kegiatan memperoleh hasil terus dari sumber semulajadi.</string>
    <string name="question_mideast">Contoh kegiatan ekonomi sekunder ialah pertanian.</string>
    <string name="question_africa">Ekonomi tertier ialah kegiatan menukar kepada barangan siap untuk pengguna.</string>
    <string name="question_americas">Pelancongan adalah salah satu kegiatan ekonomi tertier.</string>
    <string name="question_asia">Kampus induk UIAM terletak di Gombak Selangor.</string>

    <string name="warning_text">Anda pasti anda ingin petunjuk?</string>
    <string name="show_answer_button">Tunjuk jawapan</string>
    <string name="cheat_button">Petunjuk!</string>
    <string name="judgment_toast">Tipu dosa</string>

</resources>
