<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".PrimerActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/primer_txt"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="267dp"
        android:layout_height="27dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:text="@string/primer_txt_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="273dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:text="@string/primer_txt_3"
        android:textAlignment="center" />
</RelativeLayout>