<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".TertierActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="339dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="21dp"
        android:text="@string/tertier_txt_1"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="94dp"
        android:text="@string/tertier_txt_2"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="337dp"
        android:layout_height="179dp"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-9dp"
        android:layout_marginTop="164dp"
        android:text="@string/tertier_txt_3"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="189dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="141dp"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:background="@drawable/btn_kosong"
        android:onClick="goToPelancongan"
        android:text="Seterusnya"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>